added link to add in new noodles and new noodle path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   </head>
 
 <div>
-  <%= link_to "Log Out", logout_path, method: :delete%>
+  <%= link_to "Log Out", logout_path, method: :delete %>
+  <%= link_to "Add in New Noodles", new_noodle_path %>
 </div>
 
   <body>
