indexing all the noodles flavor, brand and description in the noodle index view

--- a/app/views/noodles/index.html.erb
+++ b/app/views/noodles/index.html.erb
@@ -3,6 +3,7 @@
 <% @noodles.each do |n| %>
 
   <h2><%= n.flavor%> - <%= n.brand.name %> </h2>
+  <%= link_to "Write a review", new_noodle_review_path(n.id) %>
   <div>
     <p><%= n.description %></p>
   </div>
