--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
 <div>
   <%= link_to "Log Out", logout_path, method: :delete %>
   <%= link_to "Add in New Noodles", new_noodle_path %>
+    <%= link_to "All Noodles", noodles_path %>
+    <%= link_to "Add a Review", new_review_path %>
+    <%= link_to "All Reviews", reviews_path %>
+    <%= link_to "All Brands", brands_path %>
 </div>
 
   <body>
