--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up!</h1>
 
-<% render partial: 'layouts/errors', locals: {object: @user} %> <%# renders errors from the layout view%>
+<%= render partial: 'layouts/errors', locals: {object: @user}  %> <%# renders errors from the layout view%>
 
 <%= form_for(@user) do |f|%>
     <%= f.label :username %>
