added ol and li to number the brands in the index brands view file

--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All the Brands</h1>
+<h1>All Brands</h1>
 <ol>
   <% @brands.each do |brand| %>
     <li><%= link_to brand.name, brand_path(brand)%></li>
