--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -13,3 +13,13 @@
 </div>
 </div>
 <%= link_to "#{@brand.user.username.capitalize}'s Show Page", user_path(@brand.user) %>
+<!--
+<div>
+      <% if current_user %>
+        <% if @brand.user_id == current_user.id ||  current_user.admin  %>
+          <%= link_to "Edit",  edit_brand_path(@brand) %> |
+          <%= link_to "Delete", brand_path(@brand),  method: :delete %>
+        <% end %>
+      <% end %>
+    </div>
+    -->
