changed wordings to Log In for Google and Github in the application layout views file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,9 @@
     <h3> <%= link_to "Login", login_path %>
     /
  <%= link_to "Sign Up", signup_path %> </h3>
-<%= button_to "Signup with Google", "/auth/google_oauth2" %>
+<%= button_to "Log In with Google", "/auth/google_oauth2" %>
     <br>
-    <%= button_to "Signup with Github", "/auth/github" %> 
+    <%= button_to "Log In with Github", "/auth/github" %> 
   </div>
   <%end %> <!--2021-01-22 update the login and signups look  -->
 
