--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -10,7 +10,7 @@
     <% else %>
         <div>
             <%= f.label :noodle_id, "Select a Noodle" %>
-            <%= f.collection_select :noodle_id, Noodle.alpha, :id, :flavor_and_brand, include_blank: true %>
+            <%= f.collection_select :noodle, Noodle.alpha, :id, :flavor_and_brand, include_blank: true %>
         </div>
     <% end %>
 <div>
