--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,3 +1,4 @@
+<div class="fieldswitherrors">
 <% if object.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(object.errors.count, "error") %> prohibited this from being saved:</h2>
@@ -9,3 +10,4 @@
     </ul>
   </div>
 <% end %>
+</div>
