--- a/app/views/noodles/index.html.erb
+++ b/app/views/noodles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All the Noodles</h1>
+<u><h1 style="text-align:center">All the Noodles</h1></u>
 <div class="row">
 <% @noodles.each do |noodle| %>
     <div class="col-sm-6 col-md-4">
