--- a/app/views/noodles/new.html.erb
+++ b/app/views/noodles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add in New Noodles</h1>
+<u><h1>Add in New Noodles</h1></u>
 <div>
 <% render partial: 'layouts/errors', locals: {object: @noodle} %> <%# renders errors from the layout view%>
 <%=  form_for(@noodle ,class:'form-inline' ) do |f|%>
